- Styling: fixed panel overflow w/ open dropdown menus.

--- a/RockWeb/Styles/styles-v2/components/_panels.scss
+++ b/RockWeb/Styles/styles-v2/components/_panels.scss
@@ -329,7 +329,7 @@ ul.activeusers {
 }
 }
 
-.panel-default:has(.dropdown-menu) { // Allows dropdown menus to overflow outside of Content Collection panel
+.panel-default:has(.dropdown.open) { // Allows dropdown menus to overflow outside of Content Collection panel
       overflow: visible;
 }
 
